# HangmanSolver

./: .gitignore  README.md  credentials.txt  fart.py  it.json  main.py  pyproject.toml  victims.txt
